implement basic aws request handler